# SpiraChain

./: .gitignore  .gitlab-ci.yml  ACCOMPLISSEMENT_FINAL.md  AGENTS.md  AGENT_WORK_SUMMARY.md  ARCHITECTURE.md  BENCHMARK_RESULTS_2025-10-14.md  CONTRIBUTING.md  CREDITS.md  CSS_EMERGENCY_FIX.md  Cargo.toml  Dockerfile  FINAL_ACHIEVEMENT.md  FINAL_INTEGRATION_STATUS.md  FINAL_REPORT.md  FINAL_STATUS.md  FINAL_STATUS_100.md  FINAL_SUMMARY.md  GITHUB_UPLOAD_README.md  GUIDE_UTILISATEUR_COMPLET.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION.md  LICENSE  MAINNET_CHECKLIST.md  NETLIFY_CSS_FIX.md  NETLIFY_FINAL_FIX.md  PERFORMANCE_ANALYSIS.md  PRODUCTION_READY.md  PROGRESS_REPORT.md  QUICK_START.md  README.md  ROADMAP.md  RPI_BENCHMARK_INSTRUCTIONS.md  SESSION_ACHIEVEMENTS.md  STATUS.md  STATUS_HONEST.md  SUCCESS_FINAL.md  TESTNET_ANALYSIS.md  TODO.md  WEBSITE_COMPLETE.md  (+16 more)
.github/workflows/: ci.yml
agents/: ACTIVE_AGENTS_STATUS.md  AGENT_REALITY.md  BUILD_STATUS.md  RUSTCHAIN_PROGRESS.md  RUSTCHAIN_TASKS.md  SUCCESS_100_PERCENT.md
benches/: blockchain_bench.rs
benchmarks/: performance_profile.md
browser-extension/spirawallet/: README.md  background.js  content.js  inject.js  manifest.json  popup.html  popup.js  rpc-client.js  styles.css  ui-manager.js  wallet-manager.js
crates/LeagGeniusAI/: code.md  prompt.md
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  rest.rs  websocket.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: calculate.rs  genesis.rs  init.rs  mod.rs  node.rs  query.rs  tx.rs  validator.rs  wallet.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: attack_mitigation.rs  bft.rs  difficulty.rs  lib.rs  proof_of_spiral.rs  rewards.rs  slot_consensus.rs  validator.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  constants.rs  error.rs  genesis.rs  lib.rs  manifesto.txt  spiral.rs  transaction.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: dkg.rs  hash.rs  keypair.rs  kyber.rs  lib.rs  mceliece.rs  signature.rs  xmss.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: block_sync.rs  bootstrap.rs  encryption.rs  lib.rs  libp2p_full.rs  libp2p_simple.rs  libp2p_sync.rs  libp2p_v53.rs  p2p.rs  protocol.rs  sync.rs
crates/node/: Cargo.toml
crates/node/src/: full_node.rs  lib.rs  light_node.rs  mempool.rs  state.rs  storage.rs  validator_node.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: client.rs  lib.rs  server.rs  types.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: embeddings.rs  entities.rs  lib.rs  narrative.rs  patterns.rs
crates/spirapi/: .dockerignore  .gitignore  CREDITS.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  test_engine.py
crates/spirapi-bridge/: Cargo.toml  README.md
crates/spirapi-bridge/src/: lib.rs  lib_pyo3.rs  lib_stub.rs
crates/spirapi-bridge/tests/: integration_tests.rs
crates/spirapi/.cursor/: environment.json
crates/spirapi/.github/workflows/: ci-cd.yml  ci.yml
crates/spirapi/assets/: README.md
crates/spirapi/config/: README.md  __init__.py  spirapi_config.py
crates/spirapi/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  persistent-volumes.yaml  secret.yaml  services.yaml
crates/spirapi/monitoring/: prometheus.yml
crates/spirapi/scripts/: demo_advanced_features.py  demo_ai_finale.py  demo_enterprise_interface.py  demo_math_engine.py  demo_query_engine.py  demo_storage_system.py  deploy_k8s.sh  interrupt_handler.py  launch_spirapi.py  launch_web_admin.py  launch_web_interface.py  main.py  recreate_table_via_web.py  recreate_test_constraints.py  setup.py  setup_package.py  start_server.py  test_core_features.py  upload_wiki.bat  upload_wiki.sh
crates/spirapi/src/: README.md  __init__.py  main.py
crates/spirapi/src/ai/: __init__.py  embedding_service.py  semantic_indexer.py
crates/spirapi/src/api/: __init__.py  main.py
crates/spirapi/src/cli/: spirapi_cli.py
crates/spirapi/src/interface/: spirapi_orm.py
crates/spirapi/src/math_engine/: README.md  __init__.py  pi_sequences.py
crates/spirapi/src/query/: README.md  __init__.py  spiral_engine.py
crates/spirapi/src/storage/: README.md  __init__.py  constraints.py  indexing.py  relationships.py  schema_manager.py  spirapi_database.py  transactions.py
crates/spirapi/src/web/: admin_interface.py
crates/spirapi/src/web/templates/: base.html  dashboard.html  error.html  query.html  semantic.html  simple.html  stats.html  table_detail.html  tables.html
crates/vm/: Cargo.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BECOME_VALIDATOR.md  CONSENSUS.md  DECENTRALIZED_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DNS_SETUP.md  HARDWARE_TRUTH.md  NETWORK_ARCHITECTURE.md  RASPBERRY_PI_MINING.md  RASPBERRY_PI_SETUP.md  REWARDS_SYSTEM.md  SECURITY.md  SECURITY_AUDIT_CHECKLIST.md  TESTNET_DEPLOYMENT.md  VIEWING_TRANSACTIONS.md  get-started.html
scripts/: README.md  benchmark.py  benchmark_complete.py  benchmark_spiral_generation.sh  cleanup.sh  deploy_public_testnet.sh  deploy_testnet.ps1  deploy_testnet.sh  dns_seeder.py  force_sync.sh  install.sh  install_ai.py  install_local_node.sh  install_pi_bootstrap.sh  install_validator.ps1  install_validator.sh  pre_release.sh  reset_testnet.sh  setup_dns_seeder.sh  stop_testnet.sh  test_multi_node.py  test_rpc_flow.ps1  test_rpc_flow.sh  uninstall.sh
test_data/: db
testnet_data/node_1/: validator.json
testnet_data/node_2/: validator.json
testnet_data/node_3/: validator.json
tests/: security_fuzzing.rs
web/: index.html
website/: .eslintrc.json  README.md  index.html  netlify.toml  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
website/app/: globals.css  layout.tsx  page.client.tsx  page.tsx
website/components/: ClientWrapper.tsx  Ecosystem.tsx  FeatureCard.tsx  Features.tsx  Footer.tsx  GetStarted.tsx  GradientButton.tsx  Hero.tsx  Navbar.tsx  Performance.tsx  Roadmap.tsx  StatsCounter.tsx  Technology.tsx  ThemeProvider.tsx  UseCases.tsx  (+1 more)
(+3 files in other folders)
