[workspace]
members = [
    "crates/core",
    "crates/spirapi-bridge",
    "crates/crypto",
    "crates/consensus",
    "crates/cli",
    "crates/semantic",
    "crates/network",
    "crates/node",
    "crates/api",
    "crates/vm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SpiraChain Team"]
license = "CC-BY-SA-4.0"
repository = "https://github.com/iyotee/Qbitum"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
hex = "0.4"
blake3 = "1.5"
num-bigint = "0.4"
num-traits = "0.2"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros"] }
rocksdb = "0.21"
warp = "0.3"
wasmtime = "15.0"
clap = { version = "4.4", features = ["derive"] }
bincode = "1.3"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
once_cell = "1.19"
futures = "0.3"
bytes = "1.5"
hyper = "0.14"
tower = "0.4"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
hnsw = "0.11"
ndarray = "0.15"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
