[package]
name = "spirachain-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
spirachain-core = { path = "../core" }
spirachain-node = { path = "../node" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing.workspace = true

