[package]
name = "spirachain-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
spirachain-core = { path = "../core" }
spirachain-node = { path = "../node" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
warp = "0.3"
parking_lot.workspace = true
tracing.workspace = true

