[package]
name = "spirachain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bincode.workspace = true
prost.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
