[package]
name = "spirachain-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
spirachain-core = { path = "../core" }
prometheus = "0.13"
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
once_cell = "1.19"
warp = "0.3"

