[package]
name = "spirachain-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
spirachain-core = { path = "../core" }
serde.workspace = true
tokio.workspace = true
libp2p.workspace = true
tracing.workspace = true
anyhow.workspace = true

