[package]
name = "spirachain-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
spirachain-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
blake3.workspace = true
hex.workspace = true
parking_lot.workspace = true
bincode.workspace = true
libp2p.workspace = true
futures.workspace = true

