[package]
name = "spirachain-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
spirachain-core = { path = "../core" }

axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }

