[package]
name = "spirachain-semantic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
spirachain-core = { path = "../core" }
spirapi-bridge = { path = "../spirapi-bridge" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
blake3.workspace = true
reqwest = { version = "0.11", features = ["json"] }
tracing.workspace = true

