[package]
name = "spirapi-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spirachain-core = { path = "../core" }
pyo3 = { version = "0.20", features = ["auto-initialize", "extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
hex = "0.4"
blake3 = "1.5"
parking_lot = "0.12"
once_cell = "1.19"

[lib]
crate-type = ["cdylib", "rlib"]

