[package]
name = "spirapi-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
spirachain-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
hex.workspace = true
blake3.workspace = true

[dependencies.pyo3]
workspace = true
features = ["auto-initialize"]
optional = true

[dependencies.once_cell]
version = "1.19"
optional = true

[features]
default = []
pyo3 = ["dep:pyo3", "dep:once_cell"]
